[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/sprites/characters/godot_boss-Sheet.png" type="Texture" id=1]
[ext_resource path="res://src/characters/enemies/GodotBoss/GodotBoss.gd" type="Script" id=2]
[ext_resource path="res://src/characters/enemies/GodotBoss/GodotBodyPart.gd" type="Script" id=3]
[ext_resource path="res://assets/audio/sfx/boss_death.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 7.34518

[sub_resource type="Animation" id=2]
resource_name = "close_jaw"
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, -8 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visuals/Jaw:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 8 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Visuals/LeftEye:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, -8 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Visuals/RightEye:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, -8 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "eyes_disappear"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/LeftEye:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visuals/RightEye:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visuals/Jaw:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Visuals/LeftEye:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -8 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Visuals/RightEye:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -8 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "open_jaw_slow"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visuals/Jaw:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Visuals/LeftEye:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -8 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Visuals/RightEye:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -8 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visuals/Jaw:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Visuals/LeftEye:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Visuals/RightEye:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Visuals/Head:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Visuals/Jaw:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Visuals/LeftEye:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Visuals/RightEye:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "reset_hack"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 2 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, -8 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visuals/Jaw:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( -0.1, 2 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 8 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Visuals/LeftEye:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( -0.1, 2 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, -8 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Visuals/RightEye:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( -0.1, 2 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, -8 ), Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Visuals/Head:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Visuals/Jaw:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Visuals/LeftEye:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( -0.1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Visuals/RightEye:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( -0.1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 8 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visuals:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.13 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -2, 0 ), Vector2( 2, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visuals:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="GodotBoss" type="Node2D"]
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 2 )

[node name="Visuals" type="Node2D" parent="."]

[node name="Head" type="Area2D" parent="Visuals"]
collision_layer = 8
collision_mask = 0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Visuals/Head"]
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 1 )
hframes = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Visuals/Head"]
visible = false
position = Vector2( -96.148, -64.02 )
polygon = PoolVector2Array( 45.2012, 53.1639, 37.7766, 43.0876, 47.8529, 30.0061, 58.4595, 35.8398, 69.5964, 27.3545, 69.7732, 14.4498, 84.2689, 8.9697, 89.7489, 20.2834, 102.123, 20.637, 108.134, 9.14648, 122.806, 14.8033, 122.276, 27.0009, 133.059, 35.3094, 143.666, 29.8293, 153.565, 42.9108, 146.317, 54.0478, 146.671, 83.5695, 125.811, 85.8676, 125.104, 95.06, 109.194, 96.8277, 106.896, 87.105, 84.7992, 87.8121, 82.5011, 96.2974, 66.768, 95.9438, 65.5305, 85.3372, 45.9083, 82.6856 )

[node name="Jaw" type="Area2D" parent="Visuals"]
collision_layer = 8
collision_mask = 0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Visuals/Jaw"]
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 1 )
hframes = 4
frame = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Visuals/Jaw"]
visible = false
position = Vector2( -96.148, -64.02 )
polygon = PoolVector2Array( 45.5545, 88.8478, 61.5726, 90.5163, 62.5737, 100.361, 86.2671, 102.196, 88.2694, 92.5186, 103.286, 92.5186, 105.289, 101.028, 128.982, 100.361, 130.817, 89.8489, 146.335, 88.8478, 145.668, 97.5242, 139.828, 107.035, 129.983, 112.875, 114.799, 117.213, 94.9436, 118.548, 72.2513, 116.212, 57.5681, 110.873, 47.8905, 101.362 )

[node name="LeftEye" type="Area2D" parent="Visuals"]
collision_layer = 8
collision_mask = 0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Visuals/LeftEye"]
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 1 )
hframes = 4
frame = 2

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Visuals/LeftEye"]
position = Vector2( -25.5683, 2.722 )
shape = SubResource( 1 )

[node name="RightEye" type="Area2D" parent="Visuals"]
collision_layer = 8
collision_mask = 0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Visuals/RightEye"]
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 1 )
hframes = 4
frame = 1

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Visuals/RightEye"]
position = Vector2( 25.6562, 2.722 )
shape = SubResource( 1 )

[node name="LeftEyePos" type="Position2D" parent="Visuals"]
position = Vector2( -25.5683, 2.722 )

[node name="RightEyePos" type="Position2D" parent="Visuals"]
position = Vector2( 25.6562, 2.722 )

[node name="MouthPos" type="Position2D" parent="Visuals"]
position = Vector2( 0, 27.7576 )

[node name="AnimPlayerParts" type="AnimationPlayer" parent="."]
anims/close_jaw = SubResource( 2 )
anims/eyes_disappear = SubResource( 3 )
anims/open_jaw = SubResource( 4 )
anims/open_jaw_slow = SubResource( 10 )
anims/reset = SubResource( 5 )
anims/reset_hack = SubResource( 11 )

[node name="AnimPlayerVisuals" type="AnimationPlayer" parent="."]
anims/bob = SubResource( 6 )
anims/fade_out = SubResource( 7 )
anims/reset = SubResource( 8 )
anims/shake = SubResource( 9 )

[node name="Tween" type="Tween" parent="."]

[node name="StunTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SFX" type="Node2D" parent="."]

[node name="Death" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 4 )
volume_db = 5.049
bus = "SFX"

[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
